// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui:create:atomic when using an existing pageId (--pageId flag specified) the project has been generated properly 1`] = `
HashedFolder {
  "children": [
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "svywi4m+5JDQ38UPkngnE1Mjtdo=",
                  "name": "areEnvironmentVariablesSet.ts",
                },
                HashedFile {
                  "hash": "3/G6brNR4QRqiJlaY/m/fsyTzzc=",
                  "name": "generateToken.ts",
                },
                HashedFile {
                  "hash": "AG8M1wAglfYRRL/+Y987D25+YcA=",
                  "name": "token.spec.ts",
                },
                HashedFile {
                  "hash": "LxpAYAmM+yDe4mLtd3Rj6R9S30k=",
                  "name": "token.ts",
                },
              ],
              "hash": "pmEnQcGTj9o9+LzhyIv1naaY/ak=",
              "name": "token",
            },
          ],
          "hash": "AYAizlKrvz2mLJQE53WMgok4NBY=",
          "name": "functions",
        },
        HashedFile {
          "hash": "qBh2kK6C/tcpIA4kKT8j7bm10Kw=",
          "name": "jest.config.js",
        },
        HashedFile {
          "hash": "Q5B4b7qfWLJaHE/TZpt/2vLRgUk=",
          "name": "LICENSE",
        },
        HashedFile {
          "hash": "3RItgq2aQ177ZrvBxVNrLLaaRLc=",
          "name": "netlify.toml",
        },
        HashedFile {
          "hash": "JcgnYZDTiQ6EqMwKIuEh9x+kLlA=",
          "name": "README.md",
        },
        HashedFile {
          "hash": "RmeGeAs5hovLIHxguToYky0yJDY=",
          "name": "tsconfig.json",
        },
      ],
      "hash": "H4lv26/ky0DGVWpNK4hd7vom80g=",
      "name": "lambda",
    },
    HashedFile {
      "hash": "RH58BiYWbvwHsjuAvGykfQPEhA0=",
      "name": "netlify.toml",
    },
    HashedFile {
      "hash": "Tl9+ts5pzf64nSy0AFYC4YrDfEU=",
      "name": "README.md",
    },
    HashedFolder {
      "children": [],
      "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
      "name": "scripts",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "yYnkMNFHBU75Q1vjLZNnBzeTT94=",
                  "name": "results-manager.tsx",
                },
                HashedFile {
                  "hash": "QmpidZewzj5B6dpIahLJ7SgHRYg=",
                  "name": "template-1.html",
                },
              ],
              "hash": "MhsnUowMHXMKTVw7vJkMusd/TI0=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                  "name": "sample-component.css",
                },
                HashedFile {
                  "hash": "vgtDa2FVnWYn9t5C1jG63Pdz7hA=",
                  "name": "sample-component.tsx",
                },
              ],
              "hash": "X9NLRdpTye/6iMyj9Y0ddiaI53Y=",
              "name": "sample-component",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                  "name": "sample-result-component.css",
                },
                HashedFile {
                  "hash": "uNaVrxKWu4DcnVJTCz+9hVGWQ2Q=",
                  "name": "sample-result-component.tsx",
                },
              ],
              "hash": "lIIVFoYP+9d6H0rrdSp9lYPxeWw=",
              "name": "sample-result-component",
            },
          ],
          "hash": "P4L7XTrq124MhpCS0FC+QMWCH1s=",
          "name": "components",
        },
        HashedFile {
          "hash": "2/Ssowtzkh/hx4e9vrMi11FFp1Q=",
          "name": "components.d.ts",
        },
        HashedFile {
          "hash": "/MC1IvlmPW0zAgfo82n8CnBDMrA=",
          "name": "html.d.ts",
        },
        HashedFile {
          "hash": "hlBUDBUrW6Vub74g68bUqfs3OIM=",
          "name": "index.ts",
        },
        HashedFolder {
          "children": [],
          "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
          "name": "pages",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "61GVF7l8bCVXW00H2rtInTKwoqY=",
              "name": "index.css",
            },
          ],
          "hash": "FQZ6fv/Z/8DhwZWuUbrLwgTt6r8=",
          "name": "style",
        },
      ],
      "hash": "GHDqLhyug1yPs0slpP4pjcpTszA=",
      "name": "src",
    },
    HashedFile {
      "hash": "jVuOZ6BrKT9HUer88GsGfeySq/w=",
      "name": "start-netlify.mjs",
    },
    HashedFile {
      "hash": "9nyo2P7hCKS4uXz6KBbyR2tzRtY=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "qiJ6tOeVT+G3Ixxup+ax7h1yJpo=",
  "name": "normalizedDir",
}
`;

exports[`ui:create:atomic when using an existing pageId (using the list prompt of available pages) the project has been generated properly 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "RH58BiYWbvwHsjuAvGykfQPEhA0=",
      "name": "netlify.toml",
    },
    HashedFile {
      "hash": "Tl9+ts5pzf64nSy0AFYC4YrDfEU=",
      "name": "README.md",
    },
    HashedFolder {
      "children": [
        HashedFile {
          "hash": "Jy9yA5W89BgTcZN4pVbSygA3w9U=",
          "name": "clean-up.js",
        },
        HashedFile {
          "hash": "8HGPil/NJ96KWhjo/uk9JBaq9us=",
          "name": "setup-lambda.mjs",
        },
        HashedFile {
          "hash": "SPggJ4gGqtRc5+8WHpeKd/gQcf0=",
          "name": "utils.js",
        },
      ],
      "hash": "0DHKkhnIXmyyA6198J3HAA9T0C0=",
      "name": "scripts",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "825kP1s1AjeW6LxFVkzMpo89ocw=",
                  "name": "results-manager.tsx",
                },
                HashedFile {
                  "hash": "HSqagzHtY3dAr+XN0lW0CBZjNC8=",
                  "name": "template-1.html",
                },
              ],
              "hash": "q/lRj2tA0uiP5qSDzwetWalpV04=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                  "name": "sample-component.css",
                },
                HashedFile {
                  "hash": "BmxCGos0rMicK/0OnfggnN3LfjA=",
                  "name": "sample-component.tsx",
                },
              ],
              "hash": "xXlKrMsYuYL84uzxUsvWSINRar0=",
              "name": "sample-component",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                  "name": "sample-result-component.css",
                },
                HashedFile {
                  "hash": "d6KwN3ynLpzapNKcDIf8ytG9yHE=",
                  "name": "sample-result-component.tsx",
                },
              ],
              "hash": "TEbaVqLTCYBPiOLO0nll36zByWI=",
              "name": "sample-result-component",
            },
          ],
          "hash": "RHBvkJnM5QZtfO3PXOmGTOmHcXg=",
          "name": "components",
        },
        HashedFile {
          "hash": "zOAUK2vUx2PHWaGj0Rg/i3tFp7Q=",
          "name": "components.d.ts",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFile {
          "hash": "VYQYwWUyFPlPYQDod3YJsXVOEiQ=",
          "name": "index.ts",
        },
        HashedFolder {
          "children": [],
          "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
          "name": "pages",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "ygdkeGA2hXdvtcqJyetblv/fdrw=",
              "name": "index.css",
            },
          ],
          "hash": "lRdUDVao1PTEjkh/JyuWMC0NvKk=",
          "name": "style",
        },
      ],
      "hash": "ExzuDVlgzxuZSQpSLS3jWxn/eBE=",
      "name": "src",
    },
    HashedFile {
      "hash": "XRdANxlMd+KVd0HuNLxu+WqpRu0=",
      "name": "start-netlify.mjs",
    },
    HashedFile {
      "hash": "9nyo2P7hCKS4uXz6KBbyR2tzRtY=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "2lWgSOnEGSStntBBD3K0O+ILOu0=",
  "name": "normalizedDir",
}
`;

exports[`ui:create:atomic when using the default page config (pageId not specified) the project has been generated properly 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "RH58BiYWbvwHsjuAvGykfQPEhA0=",
      "name": "netlify.toml",
    },
    HashedFile {
      "hash": "Tl9+ts5pzf64nSy0AFYC4YrDfEU=",
      "name": "README.md",
    },
    HashedFolder {
      "children": [
        HashedFile {
          "hash": "Jy9yA5W89BgTcZN4pVbSygA3w9U=",
          "name": "clean-up.js",
        },
        HashedFile {
          "hash": "8HGPil/NJ96KWhjo/uk9JBaq9us=",
          "name": "setup-lambda.mjs",
        },
        HashedFile {
          "hash": "SPggJ4gGqtRc5+8WHpeKd/gQcf0=",
          "name": "utils.js",
        },
      ],
      "hash": "0DHKkhnIXmyyA6198J3HAA9T0C0=",
      "name": "scripts",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "X8T+MmiPJFNu/lwXh6d29i/YhYo=",
                  "name": "results-manager.tsx",
                },
                HashedFile {
                  "hash": "OMU1pEfGxxywcokm8aFD8znPyaI=",
                  "name": "template-1.html",
                },
              ],
              "hash": "W1lEfKcMoS9W1dKtbS/qCjUkWkQ=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                  "name": "sample-component.css",
                },
                HashedFile {
                  "hash": "BmxCGos0rMicK/0OnfggnN3LfjA=",
                  "name": "sample-component.tsx",
                },
              ],
              "hash": "xXlKrMsYuYL84uzxUsvWSINRar0=",
              "name": "sample-component",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                  "name": "sample-result-component.css",
                },
                HashedFile {
                  "hash": "d6KwN3ynLpzapNKcDIf8ytG9yHE=",
                  "name": "sample-result-component.tsx",
                },
              ],
              "hash": "TEbaVqLTCYBPiOLO0nll36zByWI=",
              "name": "sample-result-component",
            },
          ],
          "hash": "v5QsIbKPhqUjN5T705ILECqNNNg=",
          "name": "components",
        },
        HashedFile {
          "hash": "zOAUK2vUx2PHWaGj0Rg/i3tFp7Q=",
          "name": "components.d.ts",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFile {
          "hash": "VYQYwWUyFPlPYQDod3YJsXVOEiQ=",
          "name": "index.ts",
        },
        HashedFolder {
          "children": [],
          "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
          "name": "pages",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "Dp2EpyDmwkxrxWxZxv0cM41ulEs=",
              "name": "index.css",
            },
          ],
          "hash": "aAm3g7fNVc/yWUitXMGFxqC9GIg=",
          "name": "style",
        },
      ],
      "hash": "DgwSDd7NKuEP9HKGZtLTMpgeU54=",
      "name": "src",
    },
    HashedFile {
      "hash": "XRdANxlMd+KVd0HuNLxu+WqpRu0=",
      "name": "start-netlify.mjs",
    },
    HashedFile {
      "hash": "9nyo2P7hCKS4uXz6KBbyR2tzRtY=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "0dKsmCapsdkr5IYsS8f74DLVZWs=",
  "name": "normalizedDir",
}
`;
